[package]
name = "face"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.13.2", features = ["wayland"] }
bevy_prototype_lyon = "0.11.0"
clap = { version = "4.5.4", features = ["derive"] }
iyes_perf_ui = "0.2.3"
noise = { version = "0.9.0" }
rand = { version = "0.8.5" }
