[package]
authors = ["David Michael Weis <dweis7@gmail.com>"]
name = "face"
edition = "2021"
description = "Robot face"
license = "MIT OR APACHE"
publish = false
readme = "README.md"
repository = "https://github.com/dmweis/robot-face"
version = "0.1.0"

[dependencies]
bevy = { version = "0.13.2", features = ["wayland"] }
bevy_prototype_lyon = "0.11.0"
clap = { version = "4.5.4", features = ["derive"] }
iyes_perf_ui = "0.2.3"
noise = { version = "0.9.0" }
rand = { version = "0.8.5" }

tokio = { version = "1.37", features = ["full"] }
zenoh = { version = "0.7.2-rc" }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }

anyhow = "1.0"
thiserror = "1.0"
